--- a/ClippingBasic/Application/tests/AndroidManifest.xml
+++ b/ClippingBasic/Application/tests/AndroidManifest.xml
@@ -15,6 +15,7 @@
  limitations under the License.
 -->
 <!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us -->
+<!--suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.android.clippingbasic.tests"
           android:versionCode="1"
