--- a/ElevationDrag/Application/tests/AndroidManifest.xml
+++ b/ElevationDrag/Application/tests/AndroidManifest.xml
@@ -32,6 +32,7 @@
     <!--
     Specifies the instrumentation test runner used to run the tests.
     -->
+    <!--suppress AndroidDomInspection -->
     <instrumentation
             android:name="android.test.InstrumentationTestRunner"
             android:targetPackage="com.example.android.elevationdrag"
