--- a/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
+++ b/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <!-- Every activity needs its own Manifest element.  The intent-filter contained in the
              element declares the intents that can be used to activate this Activity.  For instance,
@@ -47,7 +47,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
