--- a/AppWidget/app/src/main/AndroidManifest.xml
+++ b/AppWidget/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.appwidget">
 
     <application
@@ -23,7 +24,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppWidget">
+        android:theme="@style/Theme.AppWidget"
+        tools:ignore="DataExtractionRules">
 
         <activity
             android:name=".ListWidgetConfigureActivity"
