--- a/DarkTheme/Application/src/main/AndroidManifest.xml
+++ b/DarkTheme/Application/src/main/AndroidManifest.xml
@@ -26,12 +26,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/DarkThemeApp"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
