--- a/DocumentCentricApps/Application/src/main/AndroidManifest.xml
+++ b/DocumentCentricApps/Application/src/main/AndroidManifest.xml
@@ -25,12 +25,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name="com.example.android.documentcentricapps.DocumentCentricActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:persistableMode="persistAcrossReboots">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
