--- a/DownloadableFonts/app/src/main/AndroidManifest.xml
+++ b/DownloadableFonts/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <meta-data
             android:name="preloaded_fonts"
