--- a/ElevationBasic/Application/src/main/AndroidManifest.xml
+++ b/ElevationBasic/Application/src/main/AndroidManifest.xml
@@ -26,12 +26,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Material.Light"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
