--- a/ImmersiveMode/app/src/main/AndroidManifest.xml
+++ b/ImmersiveMode/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.immersivemode">
 
     <application
@@ -22,7 +23,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ImmersiveMode">
+        android:theme="@style/Theme.ImmersiveMode"
+        tools:ignore="DataExtractionRules">
         <activity
             android:name=".MainActivity"
             android:exported="true">
