--- a/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
+++ b/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,DataExtractionRules,GoogleAppIndexingWarning">
 
         <activity
             android:name=".MainActivity"
