--- a/Notifications/Application/src/main/AndroidManifest.xml
+++ b/Notifications/Application/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppThemeOverride"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name=".MainActivity"
