--- a/PreferencesKotlin/app/src/main/AndroidManifest.xml
+++ b/PreferencesKotlin/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,DataExtractionRules,GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:exported="true">
