--- a/SliceViewerKotlin/app/src/main/AndroidManifest.xml
+++ b/SliceViewerKotlin/app/src/main/AndroidManifest.xml
@@ -24,12 +24,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name=".ui.list.SliceViewerActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
             <intent-filter>
