--- a/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
+++ b/WindowInsetsAnimation/app/src/main/AndroidManifest.xml
@@ -24,12 +24,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat"
-        tools:ignore="AllowBackup">
+        tools:ignore="AllowBackup,DataExtractionRules">
 
         <activity
             android:name="com.google.android.samples.insetsanimation.MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
