--- a/DownloadableFontsKotlin/app/src/main/AndroidManifest.xml
+++ b/DownloadableFontsKotlin/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
+        android:supportsRtl="false"
         tools:ignore="AllowBackup,DataExtractionRules">
 
         <meta-data
