--- a/ElevationBasic/Application/tests/AndroidManifest.xml
+++ b/ElevationBasic/Application/tests/AndroidManifest.xml
@@ -33,9 +33,9 @@
     <!--
     Specifies the instrumentation test runner used to run the tests.
     -->
-    <instrumentation
-            android:name="android.test.InstrumentationTestRunner"
-            android:targetPackage="com.example.android.elevationbasic"
-            android:label="Tests for com.example.android.elevationbasic" />
+<!--    <instrumentation-->
+<!--            android:name="android.test.InstrumentationTestRunner"-->
+<!--            android:targetPackage="com.example.android.elevationbasic"-->
+<!--            android:label="Tests for com.example.android.elevationbasic" />-->
 
 </manifest>
