--- a/AndroidOnChromeOSDragAndDropDemo/app/build.gradle
+++ b/AndroidOnChromeOSDragAndDropDemo/app/build.gradle
@@ -17,11 +17,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.hadrosaur.draganddropdemo"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -32,6 +32,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.hadrosaur.draganddropdemo'
 }
 
 dependencies {
