--- a/AppShortcuts/app/build.gradle
+++ b/AppShortcuts/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.example.android.appshortcuts"
         minSdkVersion 25
-        targetSdkVersion 31
+        targetSdkVersion 32
     }
 
     compileOptions {
@@ -21,6 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    namespace 'com.example.android.appshortcuts'
 }
 
 dependencies {
