--- a/DownloadableFontsKotlin/app/build.gradle
+++ b/DownloadableFontsKotlin/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     defaultConfig {
         applicationId "com.example.android.downloadablefonts"
         minSdkVersion 14
-        targetSdkVersion 31
+        targetSdkVersion 32
     }
 
     buildTypes {
@@ -22,8 +22,9 @@ android {
         implementation 'androidx.legacy:legacy-support-v13:1.0.0'
         implementation 'androidx.cardview:cardview:1.0.0'
         implementation 'androidx.appcompat:appcompat:1.4.1'
-        implementation 'com.google.android.material:material:1.5.0'
+        implementation 'com.google.android.material:material:1.6.0'
     }
+    namespace 'com.example.android.downloadablefonts'
 }
 
 repositories {
