--- a/DragAndDropAcrossApps/DropTarget/src/main/AndroidManifest.xml
+++ b/DragAndDropAcrossApps/DropTarget/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.droptarget">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:icon="@mipmap/ic_launcher"
