--- a/ImmersiveMode/app/src/main/AndroidManifest.xml
+++ b/ImmersiveMode/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.immersivemode">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="false"
