--- a/Notifications/Shared/src/main/AndroidManifest.xml
+++ b/Notifications/Shared/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
   limitations under the License.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.wearable.wear.wearnotifications.common">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application android:allowBackup="false" android:label="@string/app_name">
 
