--- a/Notifications/Wearable/build.gradle
+++ b/Notifications/Wearable/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
+        classpath 'com.android.tools.build:gradle:7.2.0'
     }
 }
 
@@ -20,7 +20,7 @@ repositories {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.wear:wear:1.2.0'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'com.google.android.gms:play-services-wearable:17.1.0'
 
@@ -42,7 +42,7 @@ List<String> dirs = [
 
 android {
 
-    compileSdkVersion 31
+    compileSdkVersion 32
 
     defaultConfig {
         versionCode 1
@@ -50,7 +50,7 @@ android {
 
         minSdkVersion 23
 
-        targetSdkVersion 31
+        targetSdkVersion 32
 
          multiDexEnabled true
 
@@ -72,4 +72,5 @@ android {
         androidTest.java.srcDirs = ['tests/src']
 
     }
+    namespace 'com.example.android.wearable.wear.wearnotifications'
 }
