--- a/PreferencesKotlin/app/build.gradle
+++ b/PreferencesKotlin/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.example.androidx.preference.sample"
         minSdkVersion 14
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
     }
@@ -15,6 +15,7 @@ android {
             minifyEnabled false
         }
     }
+    namespace 'com.example.androidx.preference.sample'
 }
 
 dependencies {
