--- a/BasicImmersiveMode/Application/src/main/AndroidManifest.xml
+++ b/BasicImmersiveMode/Application/src/main/AndroidManifest.xml
@@ -22,10 +22,12 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,DataExtractionRules">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".MainActivity"
