--- a/DarkTheme/Application/src/main/AndroidManifest.xml
+++ b/DarkTheme/Application/src/main/AndroidManifest.xml
@@ -22,10 +22,12 @@
     <application
         android:name=".DarkThemeApplication"
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/DarkThemeApp"
-        tools:ignore="AllowBackup,DataExtractionRules">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".MainActivity"
