--- a/DownloadableFontsKotlin/app/src/main/AndroidManifest.xml
+++ b/DownloadableFontsKotlin/app/src/main/AndroidManifest.xml
@@ -18,12 +18,14 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme"
         android:supportsRtl="false"
-        tools:ignore="AllowBackup,DataExtractionRules">
+        android:theme="@style/AppTheme"
+        tools:ignore="UnusedAttribute">
 
         <meta-data
             android:name="preloaded_fonts"
