--- a/EmojiCompat/app/src/main/AndroidManifest.xml
+++ b/EmojiCompat/app/src/main/AndroidManifest.xml
@@ -18,11 +18,13 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiCompat"
-        tools:ignore="AllowBackup,DataExtractionRules,GoogleAppIndexingWarning">
+        tools:ignore="UnusedAttribute">
 
         <!-- Adding this meta-data will download the font when application is installed from
         Google Play Store. This way the font will be downloaded and ready when your app starts
