--- a/ImmersiveMode/app/src/main/AndroidManifest.xml
+++ b/ImmersiveMode/app/src/main/AndroidManifest.xml
@@ -18,12 +18,14 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ImmersiveMode"
-        tools:ignore="DataExtractionRules">
+        tools:ignore="UnusedAttribute">
         <activity
             android:name=".MainActivity"
             android:exported="true">
