--- a/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
+++ b/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
@@ -24,12 +24,14 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,DataExtractionRules,GoogleAppIndexingWarning">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".MainActivity"
