--- a/People/app/src/main/AndroidManifest.xml
+++ b/People/app/src/main/AndroidManifest.xml
@@ -18,20 +18,22 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.People"
-        tools:ignore="DataExtractionRules,GoogleAppIndexingWarning">
+        tools:ignore="UnusedAttribute">
 
         <!--
             Our main entry point.
         -->
         <activity
             android:name="com.example.android.people.MainActivity"
-            android:launchMode="singleTop"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTop">
             <!--
                 This activity is the one that's shown on the launcher.
             -->
@@ -88,8 +90,8 @@
             android:name="com.example.android.people.BubbleActivity"
             android:allowEmbedded="true"
             android:documentLaunchMode="always"
-            android:resizeableActivity="true"
-            android:exported="true">
+            android:exported="true"
+            android:resizeableActivity="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.BROWSABLE" />
