--- a/SliceViewerKotlin/app/src/main/AndroidManifest.xml
+++ b/SliceViewerKotlin/app/src/main/AndroidManifest.xml
@@ -20,10 +20,12 @@
 
     <application
         android:allowBackup="false"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,DataExtractionRules">
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".ui.list.SliceViewerActivity"
