--- a/TextLinkify/gradle/wrapper/gradle-wrapper.properties
+++ b/TextLinkify/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed 17 May 2023 07:20:01 AM EDT
+#Sat May 20 04:25:14 EDT 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
