--- a/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/AdvancedImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Jun 17 06:21:13 EDT 2023
+#Thu 22 Jun 2023 08:27:04 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
